--- a/src/app/components/story/story-plot/story-plot.component.html
+++ b/src/app/components/story/story-plot/story-plot.component.html
@@ -1,59 +1,21 @@
-<!--<div id="intro" class="intro-container">-->
-<!--  <h1>운세를 알려드립니다.</h1>-->
-<!--  <img src="./sample.jpg" alt="abstract picture">-->
-<!--  <label for="date">생년월일</label>-->
-<!--  <input id="date" type="date">-->
-<!--  <label for="hour">태어난 시간</label>-->
-<!--  <select id="hour" name="hour">-->
-<!--    <option value="">모름</option>-->
-<!--    <option value="00">00</option>-->
-<!--    <option value="01">01</option>-->
-<!--    <option value="02">02</option>-->
-<!--    <option value="03">03</option>-->
-<!--    <option value="04">04</option>-->
-<!--    <option value="05">05</option>-->
-<!--    <option value="06">06</option>-->
-<!--    <option value="07">07</option>-->
-<!--    <option value="08">08</option>-->
-<!--    <option value="09">09</option>-->
-<!--    <option value="10">10</option>-->
-<!--    <option value="11">11</option>-->
-<!--    <option value="12">12</option>-->
-<!--    <option value="13">13</option>-->
-<!--    <option value="14">14</option>-->
-<!--    <option value="15">15</option>-->
-<!--    <option value="16">16</option>-->
-<!--    <option value="17">17</option>-->
-<!--    <option value="18">18</option>-->
-<!--    <option value="19">19</option>-->
-<!--    <option value="20">20</option>-->
-<!--    <option value="21">21</option>-->
-<!--    <option value="22">22</option>-->
-<!--    <option value="23">23</option>-->
-<!--  </select>-->
-<!--  <button onclick="start()">오늘의 운세보기</button>-->
-<!--</div>-->
-<!--<div id="chat" class="chat-container">-->
-<!--  <div class="chat-box">-->
-<!--    <div class="chat-message">-->
-<!--      <p class="assistant">운세에 대해서 물어봐 주세요!</p>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--  <div id="loader" class="loader" style="display: none;">-->
-<!--    <i class="fa fa-spinner fa-spin"></i>-->
-<!--  </div>-->
-<!--  <div class="chat-input">-->
-<!--    <input type="text" placeholder="Type your message here...">-->
-<!--    <button id="btn" (click)="sendMessage()">Send</button>-->
-<!--  </div>-->
-<!--</div>-->
+<div class="chat-container">
+  <div #chatBox class="chat-box">
+    <div class="assistant-message-container">
+      <p class="ai-name">Jason</p>
+      <p class="assistant-message">스타트업 관련해서 물어봐 주세요! 최근 3년 내 스타트업 기업에 관한 통계를 바탕으로 답을 드리겠습니다!</p>
+    </div>
+  </div>
+  <form
+    [formGroup]="userInput"
+    (ngSubmit)="sendMessage()"
+    class="input-container"
+  >
+    <input
+      class="text-input"
+      formControlName="textInput"
+    />
+    <button type="submit" class="submitBtn">SEND</button>
+  </form>
+</div>
 
-<form
-  [formGroup]="userInput"
-  (ngSubmit)="sendMessage()"
->
-  <input
-    formControlName="textInput"
-  />
-  <button type="submit" class="submitBtn">SEND</button>
-</form>
+
